# RetroDeveloperEnvironmentDisktool

./: .gitignore  CMakeLists.txt  Disktool_Development_Plan.md  FIX_DELETE_FILE_LOGIC.md  FIX_RENAMEFILE_METHOD.md  HOWTO_COMPILE.md  README.md  REFACTORING_ANALYZE.md  TESTCASE.md  X68000_DIM_XDF_Implementation_Plan.md
cmake/: cmake_uninstall.cmake.in
include/rdedisktool/: BootDiskPolicy.h  CLI.h  CRC.h  DiskImage.h  DiskImageFactory.h  Exceptions.h  FileSystemHandler.h  FormatDetector.h  Types.h  Version.h  Version.h.in
include/rdedisktool/apple/: AppleConstants.h  AppleDOImage.h  AppleDiskImage.h  AppleNibImage.h  ApplePOImage.h  AppleWozImage.h  NibbleEncoder.h
include/rdedisktool/filesystem/: AppleDOS33Handler.h  AppleProDOSHandler.h  MSXDOSHandler.h  MacintoshHFSHandler.h  MacintoshMFSHandler.h
include/rdedisktool/macintosh/: DC42Checksum.h  MacFileExporters.h  MacFileImporters.h  MacGcrDecoder.h  MacGcrEncoder.h  MacMfmDecoder.h  MacMfmEncoder.h  MacintoshDC42Image.h  MacintoshDiskImage.h  MacintoshIMGImage.h  MacintoshMOOFImage.h
include/rdedisktool/msx/: MSXDMKImage.h  MSXDSKImage.h  MSXDiskImage.h  MSXXSAImage.h  XSACompressor.h  XSAExtractor.h  XSAHeader.h
include/rdedisktool/utils/: BinaryReader.h  CommandOptions.h  MacEpoch.h  MacRoman.h  PascalString.h
include/rdedisktool/x68000/: X68000DIMImage.h  X68000DiskImage.h  X68000XDFImage.h
src/apple/: AppleDOImage.cpp  AppleDiskImage.cpp  AppleNibImage.cpp  ApplePOImage.cpp  AppleWozImage.cpp  NibbleEncoder.cpp
src/cli/: CLI.cpp  main.cpp
src/core/: BootDiskPolicy.cpp  CRC.cpp  DiskImage.cpp  DiskImageFactory.cpp  FormatDetector.cpp
src/filesystem/: FileSystemHandler.cpp
src/filesystem/apple/: AppleDOS33Handler.cpp  AppleProDOSHandler.cpp
src/macintosh/: DC42Checksum.cpp  MacFileExporters.cpp  MacFileImporters.cpp  MacGcrDecoder.cpp  MacGcrEncoder.cpp  MacMfmDecoder.cpp  MacMfmEncoder.cpp  MacintoshDC42Image.cpp  MacintoshDiskImage.cpp  MacintoshIMGImage.cpp  MacintoshMOOFImage.cpp
src/msx/: MFMEncoder.cpp  MSXDMKImage.cpp  MSXDSKImage.cpp  MSXDiskImage.cpp  MSXXSAImage.cpp  XSACompressor.cpp  XSAExtractor.cpp  XSAHeader.cpp
src/utils/: BinaryReader.cpp  CommandOptions.cpp  FileUtils.cpp  FilenameConverter.cpp  MacRoman.cpp  TimestampUtils.cpp
src/x68000/: X68000DIMImage.cpp  X68000DiskImage.cpp  X68000XDFImage.cpp
tests/: test_bootdisk_guard_all.sh  test_bootdisk_guard_apple.sh  test_bootdisk_guard_macintosh.sh  test_bootdisk_guard_msx.sh  test_bootdisk_guard_x68000.sh  test_bootdisk_mode_semantics.sh  test_extract_rsrc_warn.sh  test_format_registrar.sh  test_invalid_bpb_guard.sh  test_mac_add_appledouble.sh  test_mac_add_macbinary.sh  test_mac_convert.sh  test_mac_hfs_folder_rename.sh  test_mac_hfs_leaf_split.sh  test_mac_hfs_nested.sh  test_mac_hfs_options_b.sh  test_mac_hfs_rsrc_rename.sh  test_mac_hfs_write.sh  test_mac_list_verbose.sh  test_mac_mfs_write.sh  test_mac_moof_roundtrip.sh  test_macdc42_checksum.sh  test_system_file_delete_prompt.sh
tests/baselines/: README.md  info_v_Tutorial_apple_01.do.txt  info_v_Tutorial_apple_01.po.txt  info_v_Tutorial_msx_01.dsk.txt  info_v_work.xdf.txt  list_Tutorial_apple_01.do.txt  list_Tutorial_apple_01.po.txt  list_Tutorial_msx_01.dsk.txt  list_work.xdf.txt
tests/fixtures/: CHAPTER1.TXT  DRAGON.COM  README.TXT
(+17 files in other folders)
